# text2sql

./: .gitignore  Dockerfile  HISTORY.md  JenkinsfileCI  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
Docker/: streamlit-debug.py  streamlit-v1-text.py  streamlit-v2-chat.py  streamlit-v3-chat.py  streamlit.py
cloud_func/: main.py
dockerfiles/: README.md
documentation/: conf.py  index.rst
models/: README.md
notebooks_scripts/: README.md  SQL_import_from_kaggle.py  google_setup_env.ipynb  try_out_prompts.py
references/: README.md
src/text2sql/: __init__.py  ai_utils.py  format_utils.py  sql_utils.py  types.py
src/text2sql/api/: __init__.py  api_server.py
src/text2sql/api/core/: __init__.py  config.py  errors.py  events.py  paginator.py
src/text2sql/api/models/: __init__.py  choose_a_good_name.py
src/text2sql/api/routes/: __init__.py  health.py  router.py
src/text2sql/api/services/: __init__.py
src/text2sql/cloud_functions/: info.md  script.py
src/text2sql/data/: __init__.py
src/text2sql/features/: __init__.py
src/text2sql/front/: __init__.py
src/text2sql/models/: __init__.py
src/text2sql/ressources/: README.md
src/text2sql/visualization/: __init__.py
tests/: test_pytest_install.py
